done layout and model, controller

--- a/Views/Layouts/headerLogin.html
+++ b/Views/Layouts/headerLogin.html
@@ -180,8 +180,10 @@
 .carousel-item img {
     height: 500px;
     object-fit: cover;
-    border-radius: 20px;
 }
+/* .carousel-item {
+    transition: transform 1s ease-in-out, opacity 1s ease-in-out;
+} */
     </style>
 </head>
 
@@ -212,8 +214,7 @@
             <div class="user-icon" id="user-icon">
                 <i class="fas fa-user"></i>
                 <div class="user-menu" id="user-menu">
-                    <a href="../Pages/login.php">Login</a>
-                    <a href="../Pages/register.php">Sign Up</a>
+                    <a href="../Pages/login.php">Logout</a>
                 </div>
             </div>
         </div>
