--- a/Views/Pages/subject.html
+++ b/Views/Pages/subject.html
@@ -17,7 +17,7 @@
         }
 
         .video-wrapper {
-            background: linear-gradient(135deg, #08a045, #80e27e);
+            background: linear-gradient(135deg, #28a745, #80e27e);
             border-radius: 8px;
             overflow: hidden;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -31,6 +31,7 @@
             background-color: #e8f5e9;
             border: 1px solid #c8e6c9;
             color: #2d572c;
+            position: relative;
         }
 
         .list-group-item:hover {
@@ -43,6 +44,16 @@
             background-color: #28a745;
             color: #fff;
             border-color: #28a745;
+        }
+
+        .list-group-item.active::after {
+            content: "";
+            position: absolute;
+            bottom: -1px;
+            left: 0;
+            width: 100%;
+            height: 3px;
+            background-color: #fff; /* Gạch màu trắng */
         }
 
         .expand-icon {
