--- a/Views/Layouts/header.html
+++ b/Views/Layouts/header.html
@@ -188,19 +188,19 @@
 <body>
     <header>
         <div class="logo">
-            <a href="../Pages/home.php">
-                <img src="../Public/image/logo.png" alt="Logo">
+            <a href="../../Pages/home.php">
+                <img src="../../Public/image/logo.png" alt="Logo">
             </a>
             <h1>Học cùng L5</h1>
         </div>
         <nav class="nav">
-            <a href="../Pages/home.php">
+            <a href="../../Pages/home.php">
                 <i class="fas fa-home"></i> Home
             </a>
-            <a href="../Pages/couser.php">
+            <a href="../../Pages/couser.php">
                 <i class="fas fa-book"></i> Course
             </a>
-            <a href="../Pages/about.php">
+            <a href="../../Pages/about.php">
                 <i class="fas fa-info-circle"></i> About
             </a>
         </nav>
@@ -212,8 +212,8 @@
             <div class="user-icon" id="user-icon">
                 <i class="fas fa-user"></i>
                 <div class="user-menu" id="user-menu">
-                    <a href="../Pages/login.php">Login</a>
-                    <a href="../Pages/register.php">Sign Up</a>
+                    <a href="../../Pages/user/login.php">Login</a>
+                    <a href="../../Pages/user/register.php">Sign Up</a>
                 </div>
             </div>
         </div>
