--- a/Views/Layouts/header.html
+++ b/Views/Layouts/header.html
@@ -188,19 +188,19 @@
 <body>
     <header>
         <div class="logo">
-            <a href="../../Pages/home.php">
-                <img src="../../Public/image/logo.png" alt="Logo">
+            <a href="../user/home.php">
+                <img src="../../Public/Assets/Image/download_logo.png" alt="Logo">
             </a>
             <h1>Học cùng L5</h1>
         </div>
         <nav class="nav">
-            <a href="../../Pages/home.php">
+            <a href="../user/home.php">
                 <i class="fas fa-home"></i> Home
             </a>
-            <a href="../../Pages/couser.php">
+            <a href="../user/courses.html">
                 <i class="fas fa-book"></i> Course
             </a>
-            <a href="../../Pages/about.php">
+            <a href="../user/about.php">
                 <i class="fas fa-info-circle"></i> About
             </a>
         </nav>
@@ -228,13 +228,13 @@
                 </div>
                 <div class="carousel-inner carousel-fade">
                     <div class="carousel-item active  " data-bs-interval="1000">
-                        <img src="../Public/Assets/Image/imageCouser/z6054046885157_fb78948670084b5024e08fb4e27771c9.jpg" class="d-block w-100" alt="Slide 1">
+                        <img src="../../Public/Assets/Image/imageCouser/z6054046885157_fb78948670084b5024e08fb4e27771c9.jpg" class="d-block w-100" alt="Slide 1">
                     </div>
                     <div class="carousel-item" data-bs-interval="1000">
-                        <img src="../Public/Assets/Image/imageCouser/z6054051604709_345d7edb99a22fc77b353fcdc464e015.jpg" class="d-block w-100" alt="Slide 2">
+                        <img src="../../Public/Assets/Image/imageCouser/z6054051604709_345d7edb99a22fc77b353fcdc464e015.jpg" class="d-block w-100" alt="Slide 2">
                     </div>
                     <div class="carousel-item" data-bs-interval="1000">
-                        <img src="../Public/Assets/Image/imageCouser/z6054052205270_ff3f13d53322b7bc78e9a16aeabd102e.jpg" class="d-block w-100" alt="Slide 3">
+                        <img src="../../Public/Assets/Image/imageCouser/z6054052205270_ff3f13d53322b7bc78e9a16aeabd102e.jpg" class="d-block w-100" alt="Slide 3">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
