--- a/Views/Layouts/headerLogin.html
+++ b/Views/Layouts/headerLogin.html
@@ -190,19 +190,19 @@
 <body>
     <header>
         <div class="logo">
-            <a href="../Pages/home.php">
-                <img src="../Public/image/logo.png" alt="Logo">
+            <a href="../../Pages/user/homelogin.php">
+                <img src="../../Public/Assets/Image/download_logo.png" alt="Logo">
             </a>
             <h1>Học cùng L5</h1>
         </div>
         <nav class="nav">
-            <a href="../Pages/home.php">
+            <a href="../../Pages/user/homelogin.php">
                 <i class="fas fa-home"></i> Home
             </a>
-            <a href="../Pages/couser.php">
+            <a href="../../Pages/user/courses.html">
                 <i class="fas fa-book"></i> Course
             </a>
-            <a href="../Pages/about.php">
+            <a href="../../Pages/user/about.php">
                 <i class="fas fa-info-circle"></i> About
             </a>
         </nav>
@@ -214,7 +214,8 @@
             <div class="user-icon" id="user-icon">
                 <i class="fas fa-user"></i>
                 <div class="user-menu" id="user-menu">
-                    <a href="../Pages/login.php">Logout</a>
+                    <a href="../Pages/user/login.php">Logout</a>
+                    <a href="../user/userProfile.php">Profile</a>
                 </div>
             </div>
         </div>
