--- a/Views/Layouts/header.html
+++ b/Views/Layouts/header.html
@@ -194,13 +194,13 @@
             <h1>Học cùng L5</h1>
         </div>
         <nav class="nav">
-            <a href="../user/home.php">
+            <a href="\php-project\ProjectEduWeb-PHP\Views\Pages\user\home.php">
                 <i class="fas fa-home"></i> Home
             </a>
-            <a href="../user/courses.html">
+            <a href="\php-project\ProjectEduWeb-PHP\Views\Pages\user\courses.php">
                 <i class="fas fa-book"></i> Course
             </a>
-            <a href="../user/about.php">
+            <a href="\php-project\ProjectEduWeb-PHP\Views\Pages\user\about.php">
                 <i class="fas fa-info-circle"></i> About
             </a>
         </nav>
